--- a/Ramone/Ramone.csproj
+++ b/Ramone/Ramone.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <Version>3.3.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup>
