--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'pack'
-    packagesToPack: '**/Ramone.csproj'
+    packagesToPack: '**/*.csproj'
     versioningScheme: 'off'
 
 - task: NuGetAuthenticate@0
